--- a/WU 24 - 25 Data.ipynb
+++ b/WU 24 - 25 Data.ipynb
@@ -2,16 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from collections import defaultdict\n",
+    "from rapidfuzz import process, fuzz"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -19,65 +22,75 @@
      "output_type": "stream",
      "text": [
       "Sheet name: Linfield\n",
-      "Empty DataFrame\n",
-      "Columns: [https://mahaffey2024.calicotab.com/mahaffey2024/]\n",
-      "Index: []\n",
+      "               name category     team institution  Rk1  R1  Rk2  R2  Rk3  R3  \\\n",
+      "0  Catherine Dudley     Open  CC SADU          CC  1st  77  1st  79  1st  78   \n",
+      "1       June LePage     Open  CC LEMC          CC  1st  80  2nd  77  2nd  77   \n",
+      "2  Spencer McDonald     Open  CC LEMC          CC  1st  79  2nd  78  2nd  76   \n",
+      "3      Charles Said     Open  CC SADU          CC  1st  77  1st  78  1st  77   \n",
+      "4    Brad Tomasovic     Open  CC THTO          CC  1st  77  2nd  76  1st  80   \n",
+      "\n",
+      "   Rk4  R4  Total   Avg  Stdev  \n",
+      "0  3rd  80    314  78.5   1.12  \n",
+      "1  2nd  80    314  78.5   1.50  \n",
+      "2  2nd  81    314  78.5   1.80  \n",
+      "3  3rd  80    312  78.0   1.22  \n",
+      "4  4th  79    312  78.0   1.58  \n",
       "Sheet name: YODL 2\n",
-      "     Rk            team            name      category institution  Rk1  R1  \\\n",
-      "0    8=  Air Force GoHo     Nathan Good          Open   Air Force  1st  79   \n",
-      "1    15  Air Force GoHo     Grace Hoyte          Open   Air Force  1st  78   \n",
-      "2   96=  Air Force HaMa     Noah Marino  Open, Novice   Air Force  4th  73   \n",
-      "3  114=  Air Force HaMa   Calin Hartzos  Open, Novice   Air Force  4th  74   \n",
-      "4   40=  Air Force KeNe  Audrey Neukomm          Open   Air Force  3rd  74   \n",
+      "             team            name      category institution  Rk1  R1  Rk2  R2  \\\n",
+      "0  Air Force GoHo     Nathan Good          Open   Air Force  1st  79  1st  78   \n",
+      "1  Air Force GoHo     Grace Hoyte          Open   Air Force  1st  78  1st  77   \n",
+      "2  Air Force HaMa     Noah Marino  Open, Novice   Air Force  4th  73  3rd  76   \n",
+      "3  Air Force HaMa   Calin Hartzos  Open, Novice   Air Force  4th  74  3rd  75   \n",
+      "4  Air Force KeNe  Audrey Neukomm          Open   Air Force  3rd  74  2nd  78   \n",
       "\n",
-      "   Rk2  R2  Rk3  R3  Rk4  R4  Team  Total    Avg  Trim  Stdev  \n",
-      "0  1st  78  3rd  77  3rd  75     8    309  77.25  77.5   1.48  \n",
-      "1  1st  77  3rd  78  3rd  74     8    307  76.75  77.5   1.64  \n",
-      "2  3rd  76  3rd  75  1st  76     5    300  75.00  75.5   1.22  \n",
-      "3  3rd  75  3rd  74  1st  76     5    299  74.75  74.5   0.83  \n",
-      "4  2nd  78  1st  74  1st  78     9    304  76.00  76.0   2.00  \n",
+      "   Rk3  R3  Rk4  R4  Team  Total    Avg  Trim  Stdev  \n",
+      "0  3rd  77  3rd  75     8    309  77.25  77.5   1.48  \n",
+      "1  3rd  78  3rd  74     8    307  76.75  77.5   1.64  \n",
+      "2  3rd  75  1st  76     5    300  75.00  75.5   1.22  \n",
+      "3  3rd  74  1st  76     5    299  74.75  74.5   0.83  \n",
+      "4  1st  74  1st  78     9    304  76.00  76.0   2.00  \n",
       "Sheet name: UCLA IV\n",
-      "   Rk                name category                                team  Rk1  \\\n",
-      "0   1   Tejas Subramaniam      NaN  Stanford endogeneity strikes again  2nd   \n",
-      "1   2        Elizabeth Li      NaN  Stanford endogeneity strikes again  2nd   \n",
-      "2   3  Conna Leslie-Keefe      NaN       UNSW Leslie-Keefe &amp; Doyle  1st   \n",
-      "3   4    Amitai Ben Porat      NaN               Stanford Intransigent  1st   \n",
-      "4  5=       Claire Beamer      NaN               Stanford Intransigent  1st   \n",
+      "                 name category                                team  Rk1  R1  \\\n",
+      "0   Tejas Subramaniam      NaN  Stanford endogeneity strikes again  2nd  81   \n",
+      "1        Elizabeth Li      NaN  Stanford endogeneity strikes again  2nd  80   \n",
+      "2  Conna Leslie-Keefe      NaN       UNSW Leslie-Keefe &amp; Doyle  1st  81   \n",
+      "3    Amitai Ben Porat      NaN               Stanford Intransigent  1st  79   \n",
+      "4       Claire Beamer      NaN               Stanford Intransigent  1st  80   \n",
       "\n",
-      "   R1  Rk2  R2  Rk3  R3  Rk4  R4  Rk5  R5  Total   Avg  Stdev  \n",
-      "0  81  1st  82  1st  81  1st  82  1st  82    408  81.6   0.49  \n",
-      "1  80  1st  81  1st  82  1st  80  1st  81    404  80.8   0.75  \n",
-      "2  81  1st  81  1st  81  2nd  81  3rd  79    403  80.6   0.80  \n",
-      "3  79  1st  80  2nd  80  3rd  78  1st  83    400  80.0   1.67  \n",
-      "4  80  1st  79  2nd  80  3rd  78  1st  81    398  79.6   1.02  \n",
+      "   Rk2  R2  Rk3  R3  Rk4  R4  Rk5  R5  Total   Avg  Stdev  \n",
+      "0  1st  82  1st  81  1st  82  1st  82    408  81.6   0.49  \n",
+      "1  1st  81  1st  82  1st  80  1st  81    404  80.8   0.75  \n",
+      "2  1st  81  1st  81  2nd  81  3rd  79    403  80.6   0.80  \n",
+      "3  1st  80  2nd  80  3rd  78  1st  83    400  80.0   1.67  \n",
+      "4  1st  79  2nd  80  3rd  78  1st  81    398  79.6   1.02  \n",
       "Sheet name: YODL 1\n",
-      "  Rk           name category            team institution  Rk1  R1  Rk2  R2  \\\n",
-      "0  1  Fallon Eggett     Open  Air Force EgLi   Air Force  1st  79  1st  77   \n",
-      "1  2   Dylan Berman     Open    Seattle HeBe     Seattle  1st  77  1st  78   \n",
-      "2  3  Jacquelyn Liu     Open  Air Force EgLi   Air Force  1st  77  1st  77   \n",
-      "3  4    Nathan Good     Open  Air Force GoHo   Air Force  2nd  79  1st  77   \n",
-      "4  5  Selena Little     Open  Air Force LiDo   Air Force  2nd  77  1st  78   \n",
+      "            name category            team institution  Rk1  R1  Rk2  R2  Rk3  \\\n",
+      "0  Fallon Eggett     Open  Air Force EgLi   Air Force  1st  79  1st  77  1st   \n",
+      "1   Dylan Berman     Open    Seattle HeBe     Seattle  1st  77  1st  78  1st   \n",
+      "2  Jacquelyn Liu     Open  Air Force EgLi   Air Force  1st  77  1st  77  1st   \n",
+      "3    Nathan Good     Open  Air Force GoHo   Air Force  2nd  79  1st  77  2nd   \n",
+      "4  Selena Little     Open  Air Force LiDo   Air Force  2nd  77  1st  78  1st   \n",
       "\n",
-      "   Rk3  R3  Rk4  R4  Team  Total    Avg  Stdev  Trim  \n",
-      "0  1st  80  1st  79    12    315  78.75   1.09  79.0  \n",
-      "1  1st  78  2nd  78    11    311  77.75   0.43  78.0  \n",
-      "2  1st  80  1st  77    12    311  77.75   1.30  77.0  \n",
-      "3  2nd  76  1st  78    10    310  77.50   1.12  77.5  \n",
-      "4  1st  79  3rd  76     9    310  77.50   1.12  77.5  \n",
+      "   R3  Rk4  R4  Team  Total    Avg  Stdev  Trim  \n",
+      "0  80  1st  79    12    315  78.75   1.09  79.0  \n",
+      "1  78  2nd  78    11    311  77.75   0.43  78.0  \n",
+      "2  80  1st  77    12    311  77.75   1.30  77.0  \n",
+      "3  76  1st  78    10    310  77.50   1.12  77.5  \n",
+      "4  79  3rd  76     9    310  77.50   1.12  77.5  \n",
       "Sheet name: Princeton\n",
-      "   Rk            name category                                team  Rk1  R1  \\\n",
-      "0   1      Matt Caito      NaN                 Open Matt and Paula  1st  81   \n",
-      "1   2  Matt Mauriello      NaN                  Open Matt and Robi  1st  80   \n",
-      "2   3       Tanae Rao      NaN                      Inner Temple B  1st  80   \n",
-      "3   4       Sam Druce      NaN  Open lubricated probe covers for m  1st  82   \n",
-      "4  5=        Ayal Mor      ESL                             HUJI AA  1st  80   \n",
+      "             name category                                team  Rk1  R1  Rk2  \\\n",
+      "0      Matt Caito      NaN                 Open Matt and Paula  1st  81  1st   \n",
+      "1  Matt Mauriello      NaN                  Open Matt and Robi  1st  80  1st   \n",
+      "2       Tanae Rao      NaN                      Inner Temple B  1st  80  2nd   \n",
+      "3       Sam Druce      NaN  Open lubricated probe covers for m  1st  82  2nd   \n",
+      "4        Ayal Mor      ESL                             HUJI AA  1st  80  1st   \n",
       "\n",
-      "   Rk2  R2  Rk3  R3  Rk4  R4  Rk5  R5 Total   Avg Stdev  \n",
-      "0  1st  84  1st  81  1st  82  1st  83   411  82.2  1.17  \n",
-      "1  1st  83  3rd  79  1st  82  1st  84   408  81.6  1.85  \n",
-      "2  2nd  82  2nd  81  1st  82  2nd  82   407  81.4   0.8  \n",
-      "3  2nd  81  2nd  82  2nd  79  1st  82   406  81.2  1.17  \n",
-      "4  1st  84  2nd  80  1st  82  4th  79   405    81  1.79  \n",
+      "   R2  Rk3  R3  Rk4  R4  Rk5  R5 Total   Avg Stdev  \n",
+      "0  84  1st  81  1st  82  1st  83   411  82.2  1.17  \n",
+      "1  83  3rd  79  1st  82  1st  84   408  81.6  1.85  \n",
+      "2  82  2nd  81  1st  82  2nd  82   407  81.4   0.8  \n",
+      "3  81  2nd  82  2nd  79  1st  82   406  81.2  1.17  \n",
+      "4  84  2nd  80  1st  82  4th  79   405    81  1.79  \n",
       "Sheet name: Steve Hunt\n",
       "Empty DataFrame\n",
       "Columns: []\n",
@@ -85,28 +98,219 @@
       "Sheet name: Carroll Teaching\n",
       "Empty DataFrame\n",
       "Columns: []\n",
+      "Index: []\n",
+      "Sheet name: Links\n",
+      "Empty DataFrame\n",
+      "Columns: [https://mahaffey2024.calicotab.com/mahaffey2024/]\n",
       "Index: []\n"
      ]
     }
    ],
    "source": [
-    "# Define the path to your Excel file\n",
     "file_path = r'Data\\new data.xlsx'\n",
     "\n",
-    "# Load the Excel file\n",
     "excel_data = pd.ExcelFile(file_path)\n",
     "\n",
-    "# Initialize a dictionary to hold DataFrames\n",
     "dfs = {}\n",
     "\n",
-    "# Loop through each sheet and store the DataFrame in the dictionary\n",
     "for sheet_name in excel_data.sheet_names:\n",
     "    dfs[sheet_name] = pd.read_excel(excel_data, sheet_name=sheet_name, header=0)\n",
     "\n",
-    "# Display the DataFrames\n",
+    "for df_name, df in dfs.items():\n",
+    "    if 'Rk' in df.columns:\n",
+    "        df.drop(columns=['Rk'], inplace=True)\n",
+    "\n",
     "for sheet, df in dfs.items():\n",
     "    print(f\"Sheet name: {sheet}\")\n",
-    "    print(df.head())  # Display the first few rows of each DataFrame"
+    "    print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unique_names = set()\n",
+    "\n",
+    "for df in dfs.values():\n",
+    "    if 'name' in df.columns:\n",
+    "        unique_names.update(df['name'].dropna().unique())\n",
+    "\n",
+    "unique_names_list = list(unique_names)\n",
+    "master_df = pd.DataFrame(unique_names_list, columns=['name'])\n",
+    "\n",
+    "name_mapping = {}\n",
+    "standard_names = []\n",
+    "\n",
+    "for name in master_df['name']:\n",
+    "    if standard_names:\n",
+    "        match, score, _ = process.extractOne(name, standard_names, scorer=fuzz.WRatio)\n",
+    "        if score >= 85:\n",
+    "            name_mapping[name] = match\n",
+    "        else:\n",
+    "            standard_names.append(name)\n",
+    "            name_mapping[name] = name\n",
+    "    else:\n",
+    "        standard_names.append(name)\n",
+    "        name_mapping[name] = name\n",
+    "\n",
+    "master_df['name'] = master_df['name'].replace(name_mapping)\n",
+    "\n",
+    "for key, df in dfs.items():\n",
+    "    if 'name' in df.columns:\n",
+    "        df['name'] = df['name'].replace(name_mapping)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                     1st  2nd  3rd  4th\n",
+      "Alexandr Susic       4.0  1.0  0.0  0.0\n",
+      "Samira Jamaale       2.0  3.0  6.0  1.0\n",
+      "Yaniv Regev          1.0  2.0  1.0  0.0\n",
+      "Isaac Martinez       0.0  2.0  2.0  0.0\n",
+      "Altynay Zamanbekova  0.0  0.0  3.0  2.0\n",
+      "...                  ...  ...  ...  ...\n",
+      "Ahmad Bin Tahir      1.0  1.0  2.0  1.0\n",
+      "Jenna Hammond        0.0  2.0  2.0  4.0\n",
+      "PUCV My Friend       0.0  0.0  0.0  0.0\n",
+      "Joseph Gellman       1.0  6.0  4.0  1.0\n",
+      "Zara Ammar           1.0  0.0  2.0  1.0\n",
+      "\n",
+      "[571 rows x 4 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "result_counts = defaultdict(lambda: defaultdict(int))\n",
+    "\n",
+    "for key, df in dfs.items():\n",
+    "    rank_columns = [col for col in df.columns if col.startswith('Rk')]\n",
+    "    \n",
+    "    for _, row in df.iterrows():\n",
+    "        name = row['name']\n",
+    "        for col in rank_columns:\n",
+    "            if row[col] in ['1st', '2nd', '3rd', '4th']:\n",
+    "                result_counts[name][row[col]] += 1\n",
+    "\n",
+    "master_names = master_df['name'].tolist()\n",
+    "filtered_results = {name: result_counts[name] for name in master_names}\n",
+    "\n",
+    "result_df = pd.DataFrame(filtered_results).fillna(0).T\n",
+    "result_df.columns = ['1st', '2nd', '3rd', '4th']\n",
+    "\n",
+    "result_df = result_df.reindex(master_names, fill_value=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated master_df with statistics:\n",
+      "                    name  Total Score  Average Score  Total Accumulated Score  \\\n",
+      "0         Alexandr Susic            0              0                      399   \n",
+      "1         Samira Jamaale            0              0                      889   \n",
+      "2            Yaniv Regev            0              0                      295   \n",
+      "3         Isaac Martinez            0              0                      290   \n",
+      "4    Altynay Zamanbekova            0              0                      389   \n",
+      "..                   ...          ...            ...                      ...   \n",
+      "566      Ahmad Bin Tahir            0              0                      386   \n",
+      "567        Jenna Hammond            0              0                      591   \n",
+      "568       PUCV My Friend            0              0                        0   \n",
+      "569       Joseph Gellman            0              0                      875   \n",
+      "570           Zara Ammar            0              0                      301   \n",
+      "\n",
+      "     Overall Average Score  Average Rk1  Average R1  Average Rk2  Average R2  \\\n",
+      "0                     9.98          0.0      10.000          0.0       9.500   \n",
+      "1                    27.78          NaN      27.875          NaN      28.500   \n",
+      "2                     9.22          NaN       9.000          NaN       9.250   \n",
+      "3                     9.06          0.0       9.375          0.0       9.000   \n",
+      "4                     9.72          0.0       9.750          0.0       9.625   \n",
+      "..                     ...          ...         ...          ...         ...   \n",
+      "566                   9.65          0.0       9.625          0.0       9.500   \n",
+      "567                  18.47          NaN      18.500          NaN      18.250   \n",
+      "568                    NaN          0.0         NaN          0.0         NaN   \n",
+      "569                  27.34          NaN      26.750          NaN      27.375   \n",
+      "570                   9.41          NaN       9.375          NaN       9.375   \n",
+      "\n",
+      "     Average Rk3  Average R3  Average Rk4  Average R4  Average R5  \n",
+      "0            0.0      10.000          0.0      10.250      10.125  \n",
+      "1            NaN      27.875          NaN      26.875       0.000  \n",
+      "2            NaN       9.375          NaN       9.250       0.000  \n",
+      "3            0.0       8.875          0.0       9.000       0.000  \n",
+      "4            0.0       9.875          0.0       9.625       9.750  \n",
+      "..           ...         ...          ...         ...         ...  \n",
+      "566          0.0      10.000          0.0       9.500       9.625  \n",
+      "567          NaN      18.375          NaN      18.750       0.000  \n",
+      "568          0.0         NaN          0.0         NaN         NaN  \n",
+      "569          NaN      27.750          NaN      27.500       0.000  \n",
+      "570          NaN       9.250          NaN       9.625       0.000  \n",
+      "\n",
+      "[571 rows x 14 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Function to filter valid numeric round columns\n",
+    "def get_score_columns(df):\n",
+    "    return [col for col in df.columns if col.startswith('R') and not col.startswith('Rk')]\n",
+    "\n",
+    "# Step 1: Initialize master_df with required columns\n",
+    "sample_df = next(iter(dfs.values()))  # Use any dataframe to extract column structure\n",
+    "all_round_columns = list(\n",
+    "    set(col for df in dfs.values() for col in get_score_columns(df))\n",
+    ")  # Combine all unique round columns across dataframes\n",
+    "\n",
+    "# Ensure master_df columns are initialized with compatible types\n",
+    "master_df['Total Accumulated Score'] = 0\n",
+    "master_df['Overall Average Score'] = 0.0  # Float for compatibility with averages\n",
+    "\n",
+    "for col in all_round_columns:\n",
+    "    master_df[f'Average {col}'] = 0.0  # Float for compatibility\n",
+    "\n",
+    "# Step 2: Process each dataframe in dfs\n",
+    "for key, df in dfs.items():\n",
+    "    score_columns = get_score_columns(df)  # Identify valid score columns in this dataframe\n",
+    "\n",
+    "    # Ensure score columns are numeric\n",
+    "    for col in score_columns:\n",
+    "        df[col] = pd.to_numeric(df[col], errors='coerce')  # Convert non-numeric to NaN\n",
+    "\n",
+    "    # Compute statistics per person\n",
+    "    for _, row in df.iterrows():\n",
+    "        name = row['name']\n",
+    "        if name in master_df['name'].values:\n",
+    "            total_score = row[score_columns].sum()\n",
+    "            average_score = row[score_columns].mean()\n",
+    "\n",
+    "            # Update master_df\n",
+    "            master_df.loc[master_df['name'] == name, 'Total Accumulated Score'] += total_score\n",
+    "            master_df.loc[master_df['name'] == name, 'Overall Average Score'] += average_score / len(dfs)\n",
+    "\n",
+    "            # Update per-round averages only for existing columns\n",
+    "            for col in score_columns:\n",
+    "                master_df.loc[master_df['name'] == name, f'Average {col}'] += row[col] / len(dfs)\n",
+    "\n",
+    "# Finalize overall average score computation\n",
+    "master_df['Overall Average Score'] = master_df['Overall Average Score'].round(2)\n",
+    "\n",
+    "# Step 3: Output master_df\n",
+    "print(\"Updated master_df with statistics:\")\n",
+    "print(master_df)"
    ]
   }
  ],
