completed the basic data structure and now I just need to work on UI

--- a/WU 24 - 25 Data.ipynb
+++ b/WU 24 - 25 Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,28 +166,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                     1st  2nd  3rd  4th\n",
-      "Alexandr Susic       4.0  1.0  0.0  0.0\n",
-      "Samira Jamaale       2.0  3.0  6.0  1.0\n",
-      "Yaniv Regev          1.0  2.0  1.0  0.0\n",
-      "Isaac Martinez       0.0  2.0  2.0  0.0\n",
-      "Altynay Zamanbekova  0.0  0.0  3.0  2.0\n",
-      "...                  ...  ...  ...  ...\n",
-      "Ahmad Bin Tahir      1.0  1.0  2.0  1.0\n",
-      "Jenna Hammond        0.0  2.0  2.0  4.0\n",
-      "PUCV My Friend       0.0  0.0  0.0  0.0\n",
-      "Joseph Gellman       1.0  6.0  4.0  1.0\n",
-      "Zara Ammar           1.0  0.0  2.0  1.0\n",
-      "\n",
-      "[571 rows x 4 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "result_counts = defaultdict(lambda: defaultdict(int))\n",
     "\n",
@@ -203,15 +182,13 @@
     "master_names = master_df['name'].tolist()\n",
     "filtered_results = {name: result_counts[name] for name in master_names}\n",
     "\n",
-    "result_df = pd.DataFrame(filtered_results).fillna(0).T\n",
-    "result_df.columns = ['1st', '2nd', '3rd', '4th']\n",
-    "\n",
-    "result_df = result_df.reindex(master_names, fill_value=0)"
+    "for rank in ['1st', '2nd', '3rd', '4th']:\n",
+    "    master_df[rank] = master_df['name'].map(lambda name: filtered_results.get(name, {}).get(rank, 0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -219,98 +196,79 @@
      "output_type": "stream",
      "text": [
       "Updated master_df with statistics:\n",
-      "                    name  Total Score  Average Score  Total Accumulated Score  \\\n",
-      "0         Alexandr Susic            0              0                      399   \n",
-      "1         Samira Jamaale            0              0                      889   \n",
-      "2            Yaniv Regev            0              0                      295   \n",
-      "3         Isaac Martinez            0              0                      290   \n",
-      "4    Altynay Zamanbekova            0              0                      389   \n",
-      "..                   ...          ...            ...                      ...   \n",
-      "566      Ahmad Bin Tahir            0              0                      386   \n",
-      "567        Jenna Hammond            0              0                      591   \n",
-      "568       PUCV My Friend            0              0                        0   \n",
-      "569       Joseph Gellman            0              0                      875   \n",
-      "570           Zara Ammar            0              0                      301   \n",
+      "                       name  Total Accumulated Score  Overall Average Score  \\\n",
+      "0                  Ryan Lee                      835                  28.53   \n",
+      "1                 Ava Digre                     1277                  37.58   \n",
+      "2                 Alex Chan                      773                    NaN   \n",
+      "3         Echo O&#x27;Leary                     1274                  37.48   \n",
+      "4              Vu Hoang Anh                      302                   9.44   \n",
+      "..                      ...                      ...                    ...   \n",
+      "621       Michelle Mangione                      374                   9.35   \n",
+      "622        Nguyen Ngoc Diem                      291                   9.09   \n",
+      "623  Laura Serafine Pilmark                      398                   9.95   \n",
+      "624            William Chen                      380                   9.50   \n",
+      "625                Ryan Lee                      835                  28.53   \n",
       "\n",
-      "     Overall Average Score  Average Rk1  Average R1  Average Rk2  Average R2  \\\n",
-      "0                     9.98          0.0      10.000          0.0       9.500   \n",
-      "1                    27.78          NaN      27.875          NaN      28.500   \n",
-      "2                     9.22          NaN       9.000          NaN       9.250   \n",
-      "3                     9.06          0.0       9.375          0.0       9.000   \n",
-      "4                     9.72          0.0       9.750          0.0       9.625   \n",
-      "..                     ...          ...         ...          ...         ...   \n",
-      "566                   9.65          0.0       9.625          0.0       9.500   \n",
-      "567                  18.47          NaN      18.500          NaN      18.250   \n",
-      "568                    NaN          0.0         NaN          0.0         NaN   \n",
-      "569                  27.34          NaN      26.750          NaN      27.375   \n",
-      "570                   9.41          NaN       9.375          NaN       9.375   \n",
+      "     Average R1  Average R2  Average R3  Average R4  Average R5  \n",
+      "0         75.00       76.33        0.00        0.00         0.0  \n",
+      "1         75.75       75.25       75.75       74.00        74.0  \n",
+      "2          0.00        0.00        0.00        0.00         0.0  \n",
+      "3         76.00       74.25       74.50       75.25         0.0  \n",
+      "4         74.00       75.00       75.00        0.00        78.0  \n",
+      "..          ...         ...         ...         ...         ...  \n",
+      "621       76.00       76.00       73.00       74.00        75.0  \n",
+      "622       72.00       76.00       70.00       73.00         0.0  \n",
+      "623       77.00       81.00       79.00       80.00        81.0  \n",
+      "624       77.00       76.00       75.00       77.00        75.0  \n",
+      "625       75.00       76.33        0.00        0.00         0.0  \n",
       "\n",
-      "     Average Rk3  Average R3  Average Rk4  Average R4  Average R5  \n",
-      "0            0.0      10.000          0.0      10.250      10.125  \n",
-      "1            NaN      27.875          NaN      26.875       0.000  \n",
-      "2            NaN       9.375          NaN       9.250       0.000  \n",
-      "3            0.0       8.875          0.0       9.000       0.000  \n",
-      "4            0.0       9.875          0.0       9.625       9.750  \n",
-      "..           ...         ...          ...         ...         ...  \n",
-      "566          0.0      10.000          0.0       9.500       9.625  \n",
-      "567          NaN      18.375          NaN      18.750       0.000  \n",
-      "568          0.0         NaN          0.0         NaN         NaN  \n",
-      "569          NaN      27.750          NaN      27.500       0.000  \n",
-      "570          NaN       9.250          NaN       9.625       0.000  \n",
-      "\n",
-      "[571 rows x 14 columns]\n"
+      "[626 rows x 8 columns]\n"
      ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
+    "score_columns = [\"R1\", \"R2\", \"R3\", \"R4\", \"R5\"]\n",
     "\n",
-    "# Function to filter valid numeric round columns\n",
-    "def get_score_columns(df):\n",
-    "    return [col for col in df.columns if col.startswith('R') and not col.startswith('Rk')]\n",
-    "\n",
-    "# Step 1: Initialize master_df with required columns\n",
-    "sample_df = next(iter(dfs.values()))  # Use any dataframe to extract column structure\n",
-    "all_round_columns = list(\n",
-    "    set(col for df in dfs.values() for col in get_score_columns(df))\n",
-    ")  # Combine all unique round columns across dataframes\n",
-    "\n",
-    "# Ensure master_df columns are initialized with compatible types\n",
     "master_df['Total Accumulated Score'] = 0\n",
-    "master_df['Overall Average Score'] = 0.0  # Float for compatibility with averages\n",
+    "master_df['Overall Average Score'] = 0.0\n",
     "\n",
-    "for col in all_round_columns:\n",
-    "    master_df[f'Average {col}'] = 0.0  # Float for compatibility\n",
+    "for col in score_columns:\n",
+    "    master_df[f'Total {col} Score'] = 0.0\n",
+    "    master_df[f'Count {col} Appearances'] = 0\n",
+    "    master_df[f'Average {col}'] = 0.0\n",
     "\n",
-    "# Step 2: Process each dataframe in dfs\n",
     "for key, df in dfs.items():\n",
-    "    score_columns = get_score_columns(df)  # Identify valid score columns in this dataframe\n",
+    "    available_columns = [col for col in score_columns if col in df.columns]\n",
     "\n",
-    "    # Ensure score columns are numeric\n",
-    "    for col in score_columns:\n",
-    "        df[col] = pd.to_numeric(df[col], errors='coerce')  # Convert non-numeric to NaN\n",
+    "    for col in available_columns:\n",
+    "        df[col] = pd.to_numeric(df[col], errors='coerce')\n",
     "\n",
-    "    # Compute statistics per person\n",
     "    for _, row in df.iterrows():\n",
     "        name = row['name']\n",
     "        if name in master_df['name'].values:\n",
-    "            total_score = row[score_columns].sum()\n",
-    "            average_score = row[score_columns].mean()\n",
+    "            total_score = row[available_columns].sum()\n",
+    "            average_score = row[available_columns].mean()\n",
     "\n",
-    "            # Update master_df\n",
     "            master_df.loc[master_df['name'] == name, 'Total Accumulated Score'] += total_score\n",
     "            master_df.loc[master_df['name'] == name, 'Overall Average Score'] += average_score / len(dfs)\n",
     "\n",
-    "            # Update per-round averages only for existing columns\n",
-    "            for col in score_columns:\n",
-    "                master_df.loc[master_df['name'] == name, f'Average {col}'] += row[col] / len(dfs)\n",
+    "            for col in available_columns:\n",
+    "                master_df.loc[master_df['name'] == name, f'Total {col} Score'] += row[col]\n",
+    "                master_df.loc[master_df['name'] == name, f'Count {col} Appearances'] += 1\n",
     "\n",
-    "# Finalize overall average score computation\n",
+    "for col in score_columns:\n",
+    "    master_df[f'Average {col}'] = (\n",
+    "        master_df[f'Total {col} Score'] / master_df[f'Count {col} Appearances']\n",
+    "    ).fillna(0).round(2)\n",
+    "\n",
     "master_df['Overall Average Score'] = master_df['Overall Average Score'].round(2)\n",
     "\n",
-    "# Step 3: Output master_df\n",
-    "print(\"Updated master_df with statistics:\")\n",
-    "print(master_df)"
+    "master_df.drop(\n",
+    "    [f'Total {col} Score' for col in score_columns]\n",
+    "    + [f'Count {col} Appearances' for col in score_columns],\n",
+    "    axis=1,\n",
+    "    inplace=True\n",
+    ")"
    ]
   }
  ],
