--- a/WU 24 - 25 Data.ipynb
+++ b/WU 24 - 25 Data.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#calling all needed libraries\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from collections import defaultdict\n",
@@ -18,6 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Grabbing data and throwing them into the dictionary call dfs\n",
+    "\n",
     "file_path = r'Data\\new data.xlsx'\n",
     "\n",
     "excel_data = pd.ExcelFile(file_path)\n",
@@ -29,11 +33,7 @@
     "\n",
     "for df_name, df in dfs.items():\n",
     "    if 'Rk' in df.columns:\n",
-    "        df.drop(columns=['Rk'], inplace=True)\n",
-    "\n",
-    "#for sheet, df in dfs.items():\n",
-    " #   print(f\"Sheet name: {sheet}\")\n",
-    "  #  print(df.head())"
+    "        df.drop(columns=['Rk'], inplace=True)"
    ]
   },
   {
@@ -42,6 +42,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#creates a master list of names, account for spelling errors\n",
+    "\n",
     "unique_names = set()\n",
     "\n",
     "for df in dfs.values():\n",
@@ -79,6 +81,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#counts the number of times a person has received 1st, 2nd, 3rd, or 4th\n",
+    "\n",
     "result_counts = defaultdict(lambda: defaultdict(int))\n",
     "\n",
     "for key, df in dfs.items():\n",
