--- a/WU 24 - 25 Data.ipynb
+++ b/WU 24 - 25 Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,6 +309,76 @@
     "        average_col = f\"{side} Average\"\n",
     "        if average_col in master_df.columns:\n",
     "            master_df.loc[master_df[\"name\"] == name, average_col] = average_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Skipping sheet 'Links': No 'name' column\n"
+     ]
+    }
+   ],
+   "source": [
+    "#count number of tournament appearnaces per person\n",
+    "\n",
+    "master_df[\"Total Appearances\"] = 0\n",
+    "\n",
+    "for sheet_name, df in dfs.items():\n",
+    "    if \"name\" not in df.columns:\n",
+    "        print(f\"Skipping sheet '{sheet_name}': No 'name' column\")\n",
+    "        continue\n",
+    "\n",
+    "    name_counts = df[\"name\"].value_counts()\n",
+    "\n",
+    "    for name, count in name_counts.items():\n",
+    "        master_df.loc[master_df[\"name\"] == name, \"Total Appearances\"] += count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Skipping sheet 'Links': No R# columns\n"
+     ]
+    }
+   ],
+   "source": [
+    "#finding the highest and lowest scores\n",
+    "\n",
+    "master_df[\"Highest Score\"] = np.nan\n",
+    "master_df[\"Lowest Score\"] = np.nan\n",
+    "\n",
+    "for sheet_name, df in dfs.items():\n",
+    "    score_columns = [col for col in df.columns if col.startswith(\"R\")]\n",
+    "    \n",
+    "    if not score_columns:\n",
+    "        print(f\"Skipping sheet '{sheet_name}': No R# columns\")\n",
+    "        continue\n",
+    "    \n",
+    "    for name in master_df[\"name\"]:\n",
+    "        if \"name\" in df.columns:\n",
+    "            person_scores = df.loc[df[\"name\"] == name, score_columns]\n",
+    "            \n",
+    "            scores = pd.to_numeric(person_scores.values.flatten(), errors=\"coerce\")\n",
+    "            scores = scores[~np.isnan(scores)]\n",
+    "            \n",
+    "            if len(scores) > 0:\n",
+    "                current_high = master_df.loc[master_df[\"name\"] == name, \"Highest Score\"].values[0]\n",
+    "                current_low = master_df.loc[master_df[\"name\"] == name, \"Lowest Score\"].values[0]\n",
+    "                \n",
+    "                master_df.loc[master_df[\"name\"] == name, \"Highest Score\"] = max(current_high, scores.max()) if not np.isnan(current_high) else scores.max()\n",
+    "                master_df.loc[master_df[\"name\"] == name, \"Lowest Score\"] = min(current_low, scores.min()) if not np.isnan(current_low) else scores.min()"
    ]
   }
  ],
