--- a/WU 24 - 25 Data.ipynb
+++ b/WU 24 - 25 Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,21 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from collections import defaultdict\n",
-    "from rapidfuzz import process, fuzz"
+    "from rapidfuzz import process, fuzz\n",
+    "import matplotlib.pyplot as plt\n",
+    "import os\n",
+    "from fpdf import FPDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wu_names_path = r'Data\\cleaned_student_data.xlsx'\n",
+    "\n",
+    "wu_names = pd.read_excel(wu_names_path)"
    ]
   },
   {
@@ -379,6 +393,93 @@
     "                \n",
     "                master_df.loc[master_df[\"name\"] == name, \"Highest Score\"] = max(current_high, scores.max()) if not np.isnan(current_high) else scores.max()\n",
     "                master_df.loc[master_df[\"name\"] == name, \"Lowest Score\"] = min(current_low, scores.min()) if not np.isnan(current_low) else scores.min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The following names have no data and will be skipped: {'alex van nieuwenhuysen', 'jacob mary', 'finn forman', 'cassidy ureda', 'brian sung', 'ciandramarie choun', 'isabel huh', 'jillian layton', 'kyle sessions', 'ryder mckernon', 'lucas da veiga', '\"jay shiflett (jay)\"', 'inez nieves', 'gage brock', 'eliza gonzalez', 'rocco cesario', 'sal chapell', 'mitch septoff', 'morgan shaw', 'william laduca', 'ella johanknecht', 'violeta basenko', 'dhriti sriram', 'jack crone', 'miriam schwabel', \"echo o'leary\", 'sarah jane early', 'sacha alialani des pres'}\n",
+      "Report saved to reports\\Performance_Report.pdf\n"
+     ]
+    }
+   ],
+   "source": [
+    "def prepare_wu_data(master_df, wu_names):\n",
+    "    wu_names[\"names\"] = wu_names[\"names\"].str.strip().str.lower()\n",
+    "    master_df[\"name\"] = master_df[\"name\"].str.strip().str.lower()\n",
+    "    \n",
+    "    wu_data = master_df[master_df[\"name\"].isin(wu_names[\"names\"])].reset_index(drop=True)\n",
+    "    return wu_data\n",
+    "\n",
+    "def log_missing_data(wu_names, wu_data):\n",
+    "    missing_names = set(wu_names[\"names\"]) - set(wu_data[\"name\"])\n",
+    "    if missing_names:\n",
+    "        print(f\"The following names have no data and will be skipped: {missing_names}\")\n",
+    "    return missing_names\n",
+    "\n",
+    "def create_bar_chart(data, name, output_dir):\n",
+    "    positions = [\"Opening Government\", \"Opening Opposition\", \"Closing Government\", \"Closing Opposition\"]\n",
+    "    average_columns = [\"Opening Government Average\", \"Opening Opposition Average\", \"Closing Government Average\", \"Closing Opposition Average\"]\n",
+    "    \n",
+    "    averages = data[average_columns].iloc[0].values\n",
+    "\n",
+    "    plt.figure(figsize=(8, 5))\n",
+    "    bars = plt.bar(positions, averages, color=[\"#4CAF50\", \"#2196F3\", \"#FFC107\", \"#E91E63\"])\n",
+    "    \n",
+    "    for bar, avg in zip(bars, averages):\n",
+    "        plt.text(bar.get_x() + bar.get_width() / 2, bar.get_height() + 0.05, f\"{avg:.2f}\", ha='center', fontsize=10)\n",
+    "    \n",
+    "    plt.ylim(0, 3)\n",
+    "    plt.xlabel(\"Position\", fontsize=12)\n",
+    "    plt.ylabel(\"Average Score\", fontsize=12)\n",
+    "    plt.title(f\"Average by Position for {name.title()}\", fontsize=14)\n",
+    "    plt.tight_layout()\n",
+    "\n",
+    "    if not os.path.exists(output_dir):\n",
+    "        os.makedirs(output_dir)\n",
+    "    file_path = os.path.join(output_dir, f\"{name}_average_by_position.png\")\n",
+    "    plt.savefig(file_path)\n",
+    "    plt.close()\n",
+    "    return file_path\n",
+    "\n",
+    "class PDFReport(FPDF):\n",
+    "    def header(self):\n",
+    "        self.set_font('Arial', 'B', 12)\n",
+    "        self.cell(0, 10, 'Individual Performance Report', align='C', ln=True)\n",
+    "\n",
+    "    def add_individual_chart(self, name, chart_path):\n",
+    "        self.add_page()\n",
+    "        self.set_font('Arial', '', 12)\n",
+    "        self.cell(0, 10, f\"Performance Overview: {name.title()}\", ln=True)\n",
+    "        self.ln(10)\n",
+    "        self.image(chart_path, x=10, y=30, w=190)\n",
+    "    \n",
+    "    def save(self, output_path):\n",
+    "        self.output(output_path)\n",
+    "\n",
+    "def generate_reports(master_df, wu_names, output_dir=\"reports\", chart_dir=\"charts\"):\n",
+    "    wu_data = prepare_wu_data(master_df, wu_names)\n",
+    "    log_missing_data(wu_names, wu_data)\n",
+    "\n",
+    "    pdf = PDFReport()\n",
+    "    for name in wu_data[\"name\"].unique():\n",
+    "        person_data = wu_data[wu_data[\"name\"] == name]\n",
+    "        if not person_data.empty:\n",
+    "            chart_path = create_bar_chart(person_data, name, chart_dir)\n",
+    "            pdf.add_individual_chart(name, chart_path)\n",
+    "\n",
+    "    if not os.path.exists(output_dir):\n",
+    "        os.makedirs(output_dir)\n",
+    "    pdf.save(os.path.join(output_dir, \"Performance_Report.pdf\"))\n",
+    "    print(f\"Report saved to {os.path.join(output_dir, 'Performance_Report.pdf')}\")\n",
+    "\n",
+    "generate_reports(master_df, wu_names)"
    ]
   }
  ],
